Fixed sidebar styling for line-wrapped entries
Also modified "about" sidebar links so they're properly matched by the
active page identifier, and added missing quotes, slashes to make all
the entries super matchy-matchy.

--- a/www/source/stylesheets/_layout.scss
+++ b/www/source/stylesheets/_layout.scss
@@ -90,9 +90,10 @@ body.has-sidebar {
 }
 
 .main-sidebar--list--item {
-    display: block;
-    line-height: rem-calc(32);
-    padding-left: 0;
+  display: block;
+  line-height: 1.2;
+  margin-bottom: rem-calc(13);
+  padding-left: 0;
 }
 
 .main-content__has-sidebar {
